fixed not visible pressed cls on dashboard teaser

--- a/app/src/res/css/templates/widgets/_dashboard-teaser.scss
+++ b/app/src/res/css/templates/widgets/_dashboard-teaser.scss
@@ -1,6 +1,6 @@
 .x-teaser-pressed {
-  -webkit-box-shadow: 0px 0px 10px 2px $base-color;
-  box-shadow: 0px 0px 10px 2px $base-color;
-  color: $base-color;
-  border: 1px solid $base-color;
+  -webkit-box-shadow: 0px 0px 10px 2px $base-color !important;
+  box-shadow: 0px 0px 10px 2px $base-color !important;
+  color: $base-color !important;
+  border: 1px solid $base-color !important;
 }
